--- a/landing/src/app/notification/notification-list/notification-list.component.html
+++ b/landing/src/app/notification/notification-list/notification-list.component.html
@@ -1,1 +1,8 @@
-<p>notification-list works!</p>
+<!-- <div *ngFor="let message of messages | async">
+  {{ message.text }}
+</div> -->
+
+
+<div *ngFor="let message of messages | async">
+  {{ message.text }}
+</div>
