--- a/landing/src/app/notification/notification-list/notification-list.component.html
+++ b/landing/src/app/notification/notification-list/notification-list.component.html
@@ -1,4 +1,17 @@
-<div *ngFor="let message of messages | async">
+<!-- <div *ngFor="let message of messages | async">
   {{ message.text }}
+</div> -->
+
+<div
+  *ngFor="let message of messages | async"
+  class="alert"
+  [ngClass]="message.type === 'error' ? 'alert-danger' : 'alert-success'"
+>
+  {{ message.text }}
+  <!-- <button class="btn-close">X</button> -->
+  <button
+    (click)="clearMessage(message.id)"
+    class="btn-close">
+  </button>
 </div>
 
