501. Creating Custom Pipes + 502. Custom Pipe Arguments

--- a/landing/src/app/news-api/na-article-list/na-article-list.component.html
+++ b/landing/src/app/news-api/na-article-list/na-article-list.component.html
@@ -9,6 +9,6 @@
     class="list-group-item list-group-item-action"
     target="_blank"
   >
-    {{ article.title }}
+    {{ article.title | trimOutletName: article.source!.name }}
   </a>
 </div>
