--- a/landing/src/app/news-api/na-article-list/na-article-list.component.html
+++ b/landing/src/app/news-api/na-article-list/na-article-list.component.html
@@ -13,4 +13,8 @@
   </a>
 </div>
 
-<app-paginator></app-paginator>
+<!-- <app-paginator></app-paginator> -->
+
+<app-paginator
+  [numberOfPages]="3"
+></app-paginator>
